--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,30 @@
 set-option -g default-shell /bin/zsh
+
 set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -g mouse on
+set-option -g focus-events on
+
+# Vimmy stuff
 setw -g mode-keys vi
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+set-option -sg escape-time 5
+
+# Change prefix
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# Binds
+bind-key , copy-mode\;\
+           send-keys -X start-of-line\;\
+           send-keys -X search-backward ""\;\
+           send-keys -X cursor-right\;\
+           send-keys -X cursor-right
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+bind r source-file ~/.tmux.conf
