Tmux: Status bar theme and bind changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,11 @@ set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -g mouse on
 set-option -g focus-events on
+set-option -g history-limit 100000
 
 # Vimmy stuff
 setw -g mode-keys vi
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
 set-option -sg escape-time 5
 
 # Change prefix
@@ -15,16 +16,69 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+
 # Binds
+
+# Jump to last prompt
 bind-key , copy-mode\;\
            send-keys -X start-of-line\;\
            send-keys -X search-backward ""\;\
            send-keys -X cursor-right\;\
            send-keys -X cursor-right
 
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# Modifier-vim to change panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 bind r source-file ~/.tmux.conf
+
+
+# Colours
+# default statusbar colors
+set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
+
+# default window title colors
+set-window-option -g window-status-style fg=colour244,bg=colour235 #base0 and base02
+set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -g window-status-current-style fg=colour166,bg=default #orange and default
+set-window-option -g window-status-current-style bright
+
+# pane border
+set-option -g pane-border-style fg=colour235 #base02
+set-option -g pane-active-border-style fg=colour240 #base01
+
+# message text
+set-option -g message-style fg=colour166,bg=colour235 #orange and base02
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
+set -g status-left-length 32
+set -g status-right-length 150
+
+set -g window-status-activity-style bold
+set -g message-style bold
+
+set -g status-justify centre
+set -g status-left '#[fg=colour244,bg=white,bold] ❐ #S #[fg=white,bg=colour240,nobold]⮀#[fg=colour248,bg=colour240,bold] #(whoami) #[fg=colour240,bg=colour235,nobold]⮀'
+set -ag status-left "#[fg=green,bg=colour235,bright] 🔋 #(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';') #[default]"
+set -g window-status-format "#[fg=white,bg=colour235] #I #W "
+set -g window-status-current-format "#[fg=colour235,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour235,nobold]⮀"
+
+# Date
+set -g status-right "#[fg=white,bg=default] 📅 %a %d #[default]"
+# Time
+set -ag status-right "#[fg=colour172,bright,bg=default] ⌚%l:%M %p #[default]"
+# Hostname
+set -ag status-right "#[fg=cyan,bg=default] ☠ #H #[default]"
