--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,7 @@ bind r source-file ~/.tmux.conf
 
 
 # Colours
+set-option -g status-position top
 # default statusbar colors
 set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
 
@@ -70,15 +71,28 @@ set -g status-right-length 150
 set -g window-status-activity-style bold
 set -g message-style bold
 
+
 set -g status-justify centre
-set -g status-left '#[fg=colour244,bg=white,bold] ❐ #S #[fg=white,bg=colour240,nobold]⮀#[fg=colour248,bg=colour240,bold] #(whoami) #[fg=colour240,bg=colour235,nobold]⮀'
-set -ag status-left "#[fg=green,bg=colour235,bright] 🔋 #(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';') #[default]"
+set -g status-left '\
+#[fg=colour244,bg=white,bold]#{?client_prefix,#[bg=colour160],} ❐  #S \
+#[fg=white,bg=colour240,nobold]#{?client_prefix,#[fg=colour160],} \
+#[fg=colour248,bg=colour240,bold]#(whoami)@#H #[fg=colour240,bg=colour235,nobold]#{?window_zoomed_flag, 🔍,}'
+
 set -g window-status-format "#[fg=white,bg=colour235] #I #W "
-set -g window-status-current-format "#[fg=colour235,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour235,nobold]⮀"
+set -g window-status-current-format "#[fg=colour235,bg=colour39]#[fg=colour25,bg=colour39,noreverse,bold] #I  #W #[fg=colour39,bg=colour235,nobold]"
 
 # Date
-set -g status-right "#[fg=white,bg=default] 📅 %a %d #[default]"
+#set -g status-right "#[fg=white,bg=default] 📅 %a %d #[default]"
 # Time
-set -ag status-right "#[fg=colour172,bright,bg=default] ⌚%l:%M %p #[default]"
+#set -ag status-right "#[fg=colour172,bright,bg=default] ⌚%l:%M %p #[default]"
 # Hostname
-set -ag status-right "#[fg=cyan,bg=default] ☠ #H #[default]"
+#set -ag status-right "#[fg=cyan,bg=default] ☠  #H #[default]"
+
+set -g status-right "\
+#[fg=colour240, bg=default]\
+#[fg=colour136, bg=colour240] %l:%M %p \
+#[fg=colour235]\
+#[fg=colour136, bg=colour240] %b %d '%y \
+#[fg=colour235]\
+#[fg=green,bg=colour240,bright]#(pmset -g batt | tail -1 | awk '{print $3}' | tr -d ';' | xarrgs -I{} echo \" 🔋 {}% \")"
+
