--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,10 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 bind r source-file ~/.tmux.conf
 
 
