--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,7 +22,7 @@ bind-key C-a send-prefix
 # Jump to last prompt
 bind-key , copy-mode\;\
            send-keys -X start-of-line\;\
-           send-keys -X search-backward ""\;\
+           send-keys -X search-backward "➜"\;\
            send-keys -X cursor-right\;\
            send-keys -X cursor-right
 
