--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -176,38 +176,67 @@ font:
 #draw_bold_text_with_bright_colors: false
 
 # Colors (Solarized Dark)
+#colors:
+  # Default colors
+  #  primary:
+  #  background: '#002b36' # base03
+  #  foreground: '#839496' # base0
+
+  # Cursor colors
+  #  cursor:
+  #  text:   '#002b36' # base03
+  #  cursor: '#839496' # base0
+
+  # Normal colors
+  #  normal:
+  #  black:   '#073642' # base02
+  #  red:     '#dc322f' # red
+  #  green:   '#859900' # green
+  #  yellow:  '#b58900' # yellow
+  #  blue:    '#268bd2' # blue
+  #  magenta: '#d33682' # magenta
+  #  cyan:    '#2aa198' # cyan
+  #  white:   '#eee8d5' # base2
+
+  # Bright colors
+  # bright:
+  #  black:   '#002b36' # base03
+  #  red:     '#cb4b16' # orange
+  #  green:   '#586e75' # base01
+  #  yellow:  '#657b83' # base00
+  #  blue:    '#839496' # base0
+  #  magenta: '#6c71c4' # violet
+  #  cyan:    '#93a1a1' # base1
+  #  white:   '#fdf6e3' # base3
+
+# Colors (Solarized Light)
 colors:
   # Default colors
   primary:
-    background: '#002b36' # base03
-    foreground: '#839496' # base0
-
-  # Cursor colors
-  cursor:
-    text:   '#002b36' # base03
-    cursor: '#839496' # base0
+    background: '#fdf6e3'
+    foreground: '#586e75'
 
   # Normal colors
   normal:
-    black:   '#073642' # base02
-    red:     '#dc322f' # red
-    green:   '#859900' # green
-    yellow:  '#b58900' # yellow
-    blue:    '#268bd2' # blue
-    magenta: '#d33682' # magenta
-    cyan:    '#2aa198' # cyan
-    white:   '#eee8d5' # base2
+    black:   '#073642'
+    red:     '#dc322f'
+    green:   '#859900'
+    yellow:  '#b58900'
+    blue:    '#268bd2'
+    magenta: '#d33682'
+    cyan:    '#2aa198'
+    white:   '#eee8d5'
 
   # Bright colors
   bright:
-    black:   '#002b36' # base03
-    red:     '#cb4b16' # orange
-    green:   '#586e75' # base01
-    yellow:  '#657b83' # base00
-    blue:    '#839496' # base0
-    magenta: '#6c71c4' # violet
-    cyan:    '#93a1a1' # base1
-    white:   '#fdf6e3' # base3
+    black:   '#002b36'
+    red:     '#cb4b16'
+    green:   '#586e75'
+    yellow:  '#657b83'
+    blue:    '#839496'
+    magenta: '#6c71c4'
+    cyan:    '#93a1a1'
+    white:   '#fdf6e3'
 
 # Colors (Tomorrow Night)
 #colors:
